# robotix-api

./: .dockerignore  alt_dockerfile  dockerfile  pyproject.toml  requirements.txt
src/: main.py
src/api/http/: api_router.py
src/api/http/image/: image.py
src/api/ws/: router.py
src/core/app/: app_creator.py
src/core/logger/: logger.py
src/core/model/: model_creator.py  yolo_creator.py
src/inference/: model_inference.py
src/schemas/: coordinates.py
src/usecases/: model_usecase.py
