[project]
name = "robotix-api"
version = "0.1.0"
description = ""
authors = [
    {name = "mkhmtolzhas",email = "mkhmtcore@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "ultralytics (>=8.3.110,<9.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "websockets (>=15.0.1,<16.0.0)"
]

[tool.poetry]
packages = [{include = "robotix_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
